# nile-key-v3

./: .gitignore  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE_DECISIONS.md  BACKUP_RESTORE_PLAN.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md  MASTER_ROADMAP.md  README.md  RECOVERY_RUNBOOK.md  SECURITY_POLICY.md  add_role.py  fix_role.py  nginx.conf.example  pwd.yml  setup.sh  setup_bench.sh  setup_bench_v2.sh
nile_export/: README.md  hooks.py  nile_export.json  pyproject.toml
nile_export/fixtures/: workflow.json
nile_export/ile_export/doctype/export_document/: export_document.json
nile_export/ile_export/doctype/export_shipment/: export_shipment.json
nile_export/ile_export/doctype/importer/: importer.json
nile_export/ile_export/doctype/shipping_line/: shipping_line.json
nile_export/ile_export/doctype/supplier/: supplier.json
nile_export/nile_export/: __init__.py  hooks.py  modules.txt
nile_export/nile_export/api/: compliance.py  documents.py  importers.py  integrations.py  rfq.py  shipments.py  suppliers.py
nile_export/nile_export/doctype/acid_record/: acid_record.json  acid_record.py
nile_export/nile_export/doctype/audit_evidence/: audit_evidence.json  audit_evidence.py
nile_export/nile_export/doctype/certificate_request/: certificate_request.json  certificate_request.py
nile_export/nile_export/doctype/compliance_check/: compliance_check.json  compliance_check.py
nile_export/nile_export/doctype/rfq/: rfq.json  (+1 more)
nile_export/nile_export/fixtures/: custom_docperm.json  role.json
nile_export/nile_export/tests/: __init__.py  test_doctypes.py
(+53 files in other folders)
